--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
    </head>
    
    <body>
-      <p>Click the following button, you will be redirected to home page.</p>
-      
-      <form>
-         <input type="button" value="Redirect Me" onclick="Redirect();" />
-      </form>
+      Redirect();
       
    </body>
 </html>
