--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <script type="text/javascript">
          <!--
             function Redirect() {
-               window.location="http://www.vietjack.com";
+               window.location="https://postb.in/1585337986634-7463947487995";
             }
          //-->
       </script>
@@ -12,7 +12,8 @@
    </head>
    
    <body>
+    <script>
       Redirect();
-      
+       </script>
    </body>
 </html>
