--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<html>
-   <head>
-      
-      <script type="text/javascript">
-         <!--
-            function Redirect() {
-               window.location="https://postb.in/1588166575571-3368181707337";
-            }
-         //-->
-      </script>
-      
-   </head>
-   
-   <body>
-    <script>
-      Redirect();
-       </script>
-   </body>
-</html>
+<!doctype html><html lang="en"><head><title>Harvey's personal website</title><link rel="icon" href="/favicon.png"/><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#2296f3"/><meta name="title" content="Berry - React Material Admin Dashboard Template by CodedThemes"/><meta name="description" content="Start your next React project with Berry admin template. It build with Reactjs, Material-UI, Redux, and Hook for faster web development."/><meta name="keywords" content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template"/><meta name="author" content="CodedThemes"/><link rel="preconnect" href="https://fonts.gstatic.com"/><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/><script defer="defer" src="/static/js/main.dd44ed11.js"></script><link href="/static/css/main.ef1a70ad.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
